# haskell-exercises

./: README.md  cabal.project  exercises.cabal  flake.nix  justfile  notes.md  readme.md  syntax.md
.github/workflows/: ci.yaml  update-flake-lock.yaml
app/: Main.hs
exercises/: exercises.cabal
exercises/src/: Basics.hs  BasicsDsl.hs  CreditCard.hs  FizzBuzz.hs
exercises/test/: BasicsSpec.hs  FibonacciStreamSpec.hs  TowersOfHanoiSpec.hs
game-of-life/: LICENSE  game-of-life.cabal
game-of-life/app/: Main.hs
nix/modules/flake/: devshell.nix  haskell.nix  overlay.nix  pre-commit.nix  template.nix
patches/: atomic-css.nix  atomic-css.patch  floskell.patch  hoogle.patch  hyperbole.nix
src/: FibonacciStream.hs  Main.hs  TowersOfHanoi.hs
test/: CreditCardSpec.hs  FizzBuzzSpec.hs
