cabal-version:      2.4
name:               exercises
version:            0.1.0.0
license:            MIT
copyright:          2022 Pavel Anpin
maintainer:         pavel@anpin.fyi
author:             Pavel Anpin
category:           Web
homepage:           https://anpin.fyi

-- TODO: Before hackage release.
-- A short (one-line) description of the package.
synopsis:           A template for Haskell projects using Nix

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds -Werror

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    DataKinds
    DerivingStrategies
    DerivingVia
    ImportQualifiedPost
    LambdaCase
    MultiWayIf
    NoStarIsType
    OverloadedStrings
    StrictData
    TypeFamilies
    ViewPatterns

  build-depends:
    , aeson
    , async
    , base          >=4         && <5
    , data-default
    , directory
    , filepath
    , mtl
    , optics-core
    , profunctors
    , relude        >=1.0
    , shower
    , time
    , vector        ^>=0.13.2.0
    , with-utf8

  default-language:   GHC2021

library
  import:          shared
  hs-source-dirs:  src
  exposed-modules:
    CreditCard
    FibonacciStream
    FizzBuzz
    TowersOfHanoi

executable exercises
  import:         shared
  hs-source-dirs: app
  build-depends:  exercises
  main-is:        Main.hs

test-suite exercises-test
  import:         shared
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  other-modules:
    CreditCardSpec
    FibonacciStreamSpec
    FizzBuzzSpec
    TowersOfHanoiSpec

  build-depends:
    , exercises
    , hspec      ^>=2.11
